@@ -1,14 +1,0 @@
-[Desktop Entry]
-_Name=Seahorse Agent
-_Comment=Start the Seahorse pass phrase caching agent
-Icon=seahorse
-Exec=seahorse-agent
-Terminal=false
-Type=Application
-Categories=
-OnlyShowIn=GNOME;
-X-GNOME-Autostart-enabled=true
-X-GNOME-Bugzilla-Bugzilla=GNOME
-X-GNOME-Bugzilla-Product=seahorse
-X-GNOME-Bugzilla-Component=Daemon
-X-GNOME-Bugzilla-Version=@VERSION@
