@@ -1,6 +1,5 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-agent/seahorse-agent.desktop.in.in
 agent/seahorse-agent-actions.c
 agent/seahorse-agent.c
 agent/seahorse-agent-cache.c
