@@ -1,4 +1,10 @@
 2008-01-28  Stef Walter  <stef@memberwebs.com>
+    
+    * agent/seahorse-agent.desktop.in.in: (deleted)
+    * po/POTFILES.in:
+    * agent/Makefile.am: More cleanup for Adam's last revert below.
+    
+2008-01-28  Stef Walter  <stef@memberwebs.com>
 
 	* agent/seahorse-agent-main.c:
 	* agent/seahorse-agent.c:
